디자인 패턴 코드 ### 빌더 패턴 수정 1. 인터페이스 의존성을 높이기 위해 2개의 인터페이스로 나눔